# zkloans

./: .gitignore  README.md  package-lock.json  package.json
circuits/: loan.circom
contract/: Cargo.toml
contract/src/: lib.rs  views.rs
frontend/: App.js  index.html  index.js  near-api.js  near-config.js  package-lock.json  package.json
frontend/assets/: global.css
frontend/components/app/: index.css  index.js  mock.js  style.js
frontend/components/button/: index.js
frontend/components/card/: card.css  index.css  index.js  style.js
frontend/components/confirming/: approved.json  index.js  lottie.json  rejected.json  style.js
frontend/components/generating/: index.js
frontend/components/guage/: colorlib.js  index.css  index.js
frontend/components/navbar/: index.js  style.js
frontend/components/score/: index.css  index.js  style.js
frontend/components/score-form/: index.js  style.js
frontend/components/zk/: index.js
integration-tests/: ava.config.cjs
integration-tests/src/: main.ava.ts
prover/: package-lock.json  package.json  server.js
